--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parcel-App</title>
+    <title>My Parcel App</title>
     <link rel="stylesheet" href="./src/style.css">
 </head>
-<body>
-    <h1>Parcel App</h1>
+<body class="container mx-auto bg-slate-300">
+    <h1 class="text-2xl text-center">My favourite locations</h1>
+    <div id="map" class="h-[80vh]"></div>
 </body>
-<script src="./src/app.js"></script>
+<script type="module" src="./src/app.js"></script>
 </html>
